0023013: Fails to build with gcc 4.6.3

Changes:
Removed unnecessary cast in BRepClass3d_SClassifier::PerformInfinitePoint function